classDiagram
    class RateLimitException {
        #string clientName
        #int availableInSeconds
        +getClientName() string
        +getAvailableInSeconds() int
    }

    class RateLimitService {
        -RateLimiter limiter
        +getRateLimitKey(string) string
        +getMaxAttempts(string) int
        +getDecaySeconds(string) int
        +clear(string) void
        +getRemainingAttempts(string) int
        +getAvailableIn(string) int
        +allowRequest(string) bool
        +incrementAttempts(string, int) void
    }
    
    class CompressionService {
        +isEnabled(string) bool
        +compress(string, string, string) string
        +decompress(string, string, string) string
    }

    class CacheRepository {
        -Connection db
        -CompressionService compression
        +getTableName(string) string
        +prepareHeaders(string, array) string
        +retrieveHeaders(string, string) array
        +prepareBody(string, string) string
        +retrieveBody(string, string) string
        +store(string, string, array, int) void
        +get(string, string) array
        +countTotalResponses(string) int
        +countActiveResponses(string) int
        +countExpiredResponses(string) int
        +deleteExpired(string) void
    }

    class ApiCacheManager {
        -CacheRepository repository
        -RateLimitService rateLimiter
        +getTableName(string) string
        +allowRequest(string) bool
        +getRemainingAttempts(string) int
        +getAvailableIn(string) int
        +incrementAttempts(string, int) void
        +storeResponse(string, string, array, string, string, int) void
        +getCachedResponse(string, string) array
        +normalizeParams(array, int) array
        +generateCacheKey(string, string, array, string, string) string
    }
    
    class BaseApiClient {
        #string clientName
        #string baseUrl
        #string apiKey
        #string version
        #bool wslEnabled
        #PendingRequest pendingRequest
        #ApiCacheManager cacheManager
        +getClientName() string
        +getBaseUrl() string
        +getApiKey() string
        +getVersion() string
        +getTableName(string) string
        +getTimeout() int
        +setClientName(string) self
        +setBaseUrl(string) self
        +setApiKey(string) self
        +setVersion(string) self
        +setWslEnabled(bool) self
        +setTimeout(int) self
        +isWslEnabled() bool
        +buildUrl(string)* string
        +sendRequest(string, array, string) array
        +sendCachedRequest(string, array, string) array
        +getHealth() array
        +resolveCacheManager(ApiCacheManager) ApiCacheManager
    }
    
    class DemoApiClient {
        +predictions(string, int, array) array
        +reports(string, string, array) array
    }
    
    class OpenAIApiClient {
        +completions(string, string, int, int, float, float, array) array
        +chatCompletions(array|string, string, int, int, float, float, array) array
    }
    
    ApiCacheManager --> CacheRepository : uses
    ApiCacheManager --> RateLimitService : uses
    CacheRepository --> CompressionService : uses
    BaseApiClient <|-- DemoApiClient : extends
    BaseApiClient <|-- OpenAIApiClient : extends
    Exception <|-- RateLimitException : extends